--- a/WWW/index.html
+++ b/WWW/index.html
@@ -60,10 +60,10 @@
             <div class="user_info">
                 <div class="title"><a href="index.html">llama3</a></div>
                 <img src="img/giphy.gif" class="no-show wait" alt="loading-GIF">
-                <div class="login-no no-show">
+                <div class="login-no">
                     <a href="#" id="loging">登入</a>
                 </div>
-                <div class="login-yes">
+                <div class="login-yes no-show">
                     <img src="img/user_icon.png" alt="user">
                     <p id="user_name">User</p>
                     <a href="#" id="logout">登出</a>
